# diplom

./: .gitignore  README.md  body2.txt  db.sql  Демченко Лидия ДИПЛОМ.pptx  Диплом.docx  диаграмма передачи данных.drawio
examples/sdk-demos/: .env.example  .gitignore  README.md
examples/sdk-demos/browser/: fetch_track_demo.html
examples/sdk-demos/frontend/: README.md
examples/sdk-demos/frontend/react-vite/: .env.example  index.html  package-lock.json  vite.config.js
examples/sdk-demos/frontend/vue-vite/: .env.example  package-lock.json  package.json  vite.config.js
examples/sdk-demos/nodejs/: 01_minimal.cjs  02_express_demo.cjs  03_fastify_demo.cjs  04_upload_log.cjs  package-lock.json  package.json
examples/sdk-demos/php/: .env.example  01_minimal.php  02_builtin_server.php  03_slim_demo.php  04_upload_log.php  bootstrap_local_env.php  composer.json
examples/sdk-demos/php/laravel-demo/: README.md
examples/sdk-demos/php/laravel-monitor-demo/: composer.json  serve-dev.ps1  server.php
examples/sdk-demos/python/: 01_minimal_client.py  02_fastapi_demo.py  03_flask_demo.py  04_starlette_demo.py  05_quart_demo.py  06_litestar_demo.py  07_logs_upload.py  requirements.txt
examples/sdk-demos/sql/: seed_demo_project.sql
project/: .gitignore  README.md
project/backend/: README.md  alembic.ini  pytest.ini
project/backend/alembic/: alembic.ini
project/backend/db/: migrations_add_alert_throttle.sql  seed_collector_security.sql
project/backend/db/migrations/: env.py
project/backend/requirements/: base.txt  bot.txt  dev.txt  local_llm.txt  ml.txt
project/backend/src/api/: auth.py  main.py  schemas_ingest.py
project/backend/src/core/: __init__.py  config.py  database.py  (+3 more)
project/backend/tests/: conftest.py
project/docker/: .env.example  Dockerfile.backend  QUICK_INSTALL.md  README.md  docker-compose.yml
project/docker/models/: .gitignore
project/docker/scripts/: pg_backup_loop.sh
project/sdk-js/: README.md  package-lock.json  package.json  webpack.config.js
project/sdk-js/src/: index.js
project/sdk-php/: README.md  composer.json
project/sdk-php/src/: Client.php  Logs.php  Monitor.php  helpers.php
project/sdk-python/: README.md  pyproject.toml
project/sdk-python/src/error_monitor_sdk/: __init__.py  client.py  logs.py
project/sdk-python/src/error_monitor_sdk/integrations/: django.py  fastapi.py  flask.py  litestar.py  quart.py  starlette.py
project/sdk-python/src/error_monitor_sdk/utils/: context.py
(+80 files in other folders)
