# Файл: sdk-python/pyproject.toml
[project]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "blinker>=1.7.0",  # для сигналов
    "backoff>=2.2.0",  # retry логика
    "platformdirs>=4.0.0",  # пути к файлам
]

# Дополнительно для конкретных фреймворков
[project.optional-dependencies]
django = ["Django>=4.2.0"]
fastapi = ["FastAPI>=0.104.0"]
flask = ["Flask>=3.0.0"]
celery = ["Celery>=5.3.0"]

# Dev зависимости
[project.optional-dependencies.dev]
test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-mock>=3.11.0"]