[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "error-monitor-sdk"
version = "1.0.0"
description = "SDK for centralized error monitoring platform"
readme = "README.md"
authors = [{ name = "Андрей", email = "swooplida@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/swoopli/monitoring-platform"
Repository = "https://github.com/swoopli/monitoring-platform"

[tool.setuptools.packages.find]
where = ["src"]