[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "error-monitor-sdk"
version = "1.0.0"
description = "SDK for centralized error monitoring platform"
readme = "README.md"
authors = [{ name = "Андрей", email = "swooplida@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
starlette = ["starlette>=0.27"]
fastapi = ["fastapi>=0.104"]
flask = ["flask>=3.0"]
quart = ["quart>=0.19"]
litestar = ["litestar>=2.0"]
django = ["django>=4.2"]
web = [
    "starlette>=0.27",
    "fastapi>=0.104",
    "flask>=3.0",
    "quart>=0.19",
    "litestar[standard]>=2.0",
]

[project.urls]
Homepage = "https://github.com/swoopli/monitoring-platform"
Repository = "https://github.com/swoopli/monitoring-platform"

[tool.setuptools.packages.find]
where = ["src"]